# RustForCppDevsCodeSnippets

./: .gitignore  LICENSE  README.md  resources.md  vector.cpp  vector.rs  wishlist.md
cpp-examples/: CMakeLists.txt  build.sh  move.cpp  mutability.cpp  patternmatching.cpp  vector.cpp
rust-example-doctests/: Cargo.toml
rust-example-doctests/src/: lib.rs
rust-examples/: Cargo.toml
rust-examples/src/: error_handling.rs  error_handling_anyhow.rs  error_handling_solution.rs  mutability.rs  mutability_solution.rs  ownership_borrowing.rs  ownership_borrowing_solution.rs  ownership_borrowing_solution_unidiomatic.rs  pattern_matching_intro.rs  pattern_matching_intro_solution.rs  pattern_matching_intro_solution_extension.rs  patternmatching.rs  tests.rs  tests_solution.rs  vector_example.rs
