[package]
name = "rust-examples"
version = "0.1.0"
authors = ["Lotte Steenbrink <lotte@zombietetris.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"


[[bin]]
name = "ownership_borrowing"
path = "src/ownership_borrowing.rs"

[[bin]]
name = "ownership_borrowing_solution_unidiomatic"
path = "src/ownership_borrowing_solution_unidiomatic.rs"

[[bin]]
name = "ownership_borrowing_solution_1"
path = "src/ownership_borrowing_solution_1.rs"

[[bin]]
name = "mutability"
path = "src/mutability.rs"

[[bin]]
name = "mutability_solution"
path = "src/mutability_solution.rs"

[[bin]]
name = "vector_example"
path = "src/vector_example.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[[bin]]
name = "error_handling_solution"
path = "src/error_handling_solution.rs"
